syntax = "proto3";

option csharp_namespace = "IdentityServer.Protos";

package IdentityServer;

service Identity {
  rpc GetEmployees (GetEmployeesRequest) returns (GetEmployeesResponse);
  rpc GetEmployee (GetEmployeeRequest) returns (GetEmployeeResponse);
  rpc GetWarehouseEmpCount (GetWarehouseEmpCountRequest) returns (GetWarehouseEmpCountResponse);
}

message GetEmployeesRequest {
  string companyId = 1;
}

message GetEmployeesResponse {
  repeated Employee employees = 1;
}

message GetEmployeeRequest {
  string id = 1;
}

message GetEmployeeResponse {
  Employee employee = 1;
  bool success = 2;
  repeated string message = 3;
}

message GetWarehouseEmpCountRequest {
  string warehouseId = 1;
}

message GetWarehouseEmpCountResponse {
  int32 count = 1;
  bool success = 2;
  repeated string message = 3;
}

message Employee {
  string id = 1;
  string name = 2;
  string email = 3;
  string companyId = 4;
  string warehouseId = 5;
  string warehouseName = 6;
  string role = 7;
}